OHARA-1145 Update StreamApp Action API of Swagger Doc and Add Interface (#31)
