# docker/swagger/yamls/configurator.yaml
@@ -33,6 +33,8 @@ tags:
   externalDocs:
     description: "Google Doc"
     url: "https://ppt.cc/fhYKUx"
+- name: "StreamApp"
+  description: "StreamApp Action Operations"
 - name: "StreamApp List"
   description: "StreamApp List Page Operations"
 - name: "StreamApp Property"
@@ -160,6 +162,60 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
+  /stream/{id}/start:
+    put:
+      tags:
+      - "StreamApp"
+      summary: "Start streamApp application"
+      description: "Start streamApp application by streamApp id"
+      operationId: "startStreamApp"
+      parameters:
+      - in: "path"
+        name: "id"
+        description: "ID of streamApp to start"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        200:
+          description: "successful streamApp action operation"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/StreamActionResponse"
+        400:
+          description: "error response"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /stream/{id}/stop:
+    put:
+      tags:
+      - "StreamApp"
+      summary: "Stop streamApp application"
+      description: "Stop streamApp application by streamApp id"
+      operationId: "stopStreamApp"
+      parameters:
+      - in: "path"
+        name: "id"
+        description: "ID of streamApp to stop"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        200:
+          description: "successful streamApp action operation"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/StreamActionResponse"
+        400:
+          description: "error response"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /stream/jars/{pipelineId}:
     get:
       tags:
@@ -375,6 +431,16 @@ components:
         numberOfReplications:
           type: "integer"
           format: "int16"
+    StreamActionResponse:
+      type: "object"
+      properties:
+        id:
+          type: "string"
+        state:
+          type: "string"
+          required: false
+          enum: [RUNNING, EXITED]
+
     StreamListResponse:
       type: "object"
       properties:
